--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="tn30.sh181.qrshopping.MainActivity"
+    tools:showIn="@layout/app_bar_main"
     android:orientation="vertical"
     android:gravity="center">
 
