--- a/app/src/main/res/layout/fragment_purchase_history.xml
+++ b/app/src/main/res/layout/fragment_purchase_history.xml
@@ -48,31 +48,9 @@
             style="@style/Base.Widget.AppCompat.Button.Borderless"
             android:text="Manage"/>
     </LinearLayout>
-
-    <LinearLayout
+    <ListView
+        android:id="@+id/listViewPurchaseProduct"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/txtViewProductName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="9"/>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_weight="1"
-            android:gravity="center">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Qty :"/>
-            <TextView
-                android:id="@+id/txtViewProductQuantity"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="1"/>
-        </LinearLayout>
-    </LinearLayout>
+        android:layout_height="wrap_content">
+    </ListView>
 </LinearLayout>
