--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="tn30.sh181.qrshopping.MainActivity"
-    tools:showIn="@layout/app_bar_main"
-    android:orientation="vertical"
-    android:gravity="center">
+    tools:showIn="@layout/app_bar_main">
 
     <TextView
         android:id="@+id/textViewName"
@@ -34,9 +34,9 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_below="@+id/userProfile"
-        android:orientation="horizontal"
+        android:layout_marginTop="5dp"
         android:baselineAligned="false"
-        android:layout_marginTop="5dp">
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -55,17 +55,17 @@
                     android:id="@+id/imageButtonTopUp"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:src="@drawable/ic_add_box_black_24dp"
+                    android:background="@color/zxing_transparent"
                     android:contentDescription="Top Up Wallet"
-                    android:background="@color/zxing_transparent"/>
+                    android:src="@drawable/ic_add_box_black_24dp" />
 
                 <TextView
                     android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="19dp"
                     android:text="Top Up Wallet"
-                    tools:layout_editor_absoluteX="55dp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    tools:layout_editor_absoluteX="55dp" />
             </LinearLayout>
 
         </LinearLayout>
@@ -79,20 +79,20 @@
             android:orientation="vertical">
 
             <ImageButton
-                android:id="@+id/imageButtonPayFriend"
+                android:id="@+id/imageButtonHistory"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:src="@drawable/ic_add_box_black_24dp"
-                android:contentDescription="Friend Transaction"
-                android:background="@color/zxing_transparent"/>
+                android:background="@color/zxing_transparent"
+                android:contentDescription="Purchase History"
+                android:src="@drawable/ic_add_box_black_24dp" />
 
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="19dp"
-                android:text="Friend Transaction"
-                tools:layout_editor_absoluteX="55dp"
-                android:textStyle="bold"/>
+                android:text="Purchase History"
+                android:textStyle="bold"
+                tools:layout_editor_absoluteX="55dp" />
         </LinearLayout>
 
 
